[package]
name = "playpen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
libseccomp-sys = "0.3"
ratatui = "0.29"
crossterm = "0.28"
nix = { version = "0.31", features = ["socket", "uio"] }

[[bin]]
name = "playpen"
path = "src/main.rs"
